# xilem-cross-platform

./: Cargo.toml  LICENSE-MIT  README.md  build_rust_deps.sh
app/: Cargo.toml  README.md
app/src/: lib.rs
desktop/: Cargo.toml  README.md
desktop/src/: main.rs
mobile/: Cargo.toml
mobile/src/: lib.rs
xilem_example_mobile.xcodeproj/: project.pbxproj
xilem_example_mobile.xcodeproj/xcshareddata/xcschemes/: xilem_example_mobile.xcscheme
